--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,7 +21,7 @@ jobs:
         path: "artifact.dat"
         compression-level: 6
     - name: upload artifact compression 9
-      uses: actions-upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: "artifact-9"
         path: "artifact.dat"
