--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,7 +7,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: generate artifacts
       run: |
-        dd if=/dev/zero of=artifact.dat  bs=1M  count=8600
+        dd if=/dev/urandom of=artifact.dat  bs=1M  count=8600
     - name: upload artifact compression 0
       uses: actions/upload-artifact@v4
       with:
