--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,13 +7,19 @@ jobs:
     - uses: actions/checkout@v2
     - name: generate artifacts
       run: |
-        dd if=/dev/urandom of=artifact.dat  bs=1M  count=8600
+        dd if=/dev/zero of=artifact.dat  bs=1M  count=8600
     - name: upload artifact compression 0
       uses: actions/upload-artifact@v4
       with:
         name: "artifact-0"
         path: "artifact.dat"
         compression-level: 0
+    - name: upload artifact compression 3
+      uses: actions/upload-artifact@v4
+      with:
+        name: "artifact-3"
+        path: "artifact.dat"
+        compression-level: 3
     - name: upload artifact compression 6
       uses: actions/upload-artifact@v4
       with:
