--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,6 +15,8 @@ jobs:
         echo "TEST=${{ steps.set.outputs.VAR }}_lib"
     - name: Downloading artifact from a different repo
       run: gh run download 13291957457 --repo rapidsai/rmm --name rmm_conda_cpp_cuda11_aarch64
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     # - name: upload artifact compression 3
     #   uses: actions/upload-artifact@v4
     #   with:
