--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,7 +14,10 @@ jobs:
       run: |
         echo "TEST=${{ steps.set.outputs.VAR }}_lib"
     - name: Downloading artifact from a different repo
-      run: gh run download 13291957457 --repo rapidsai/rmm --name rmm_conda_cpp_cuda11_aarch64
+      run: |
+          mkdir temp
+          gh run download 13291957457 --repo rapidsai/rmm --name rmm_conda_cpp_cuda11_aarch64 --dir temp
+          echo "ls temp"
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     # - name: upload artifact compression 3
