--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -17,7 +17,7 @@ jobs:
       run: |
           mkdir temp
           gh run download 13291957457 --repo rapidsai/rmm --name rmm_conda_cpp_cuda11_aarch64 --dir temp
-          echo "ls temp"
+          ls temp
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     # - name: upload artifact compression 3
