--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,5 +1,11 @@
 name: compression-test
-on: [push]
+on:
+  workflow_call:
+    inputs:
+      myInput:
+        description: 'A custom input'
+        type: string
+        default: ${{ github.repository#*/ }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -9,6 +15,7 @@ jobs:
       run: |
         export "rmm=test_value"
         echo "VAR=${rmm}" >> "${GITHUB_OUTPUT}"
+        echo "REPO is ${{ inputs.myInput }}
       id: set
     - name: Using output substitution
       run: |
