--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,9 +7,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: generate artifacts
       run: |
-        export "rmm=test_value"
+        $rmm="test_value"
         echo "VAR=${rmm}" >> "${GITHUB_OUTPUT}"
-        echo "REPO is ${{ github.repository }}
+        echo "REPO is ${{ github.repository }}"
       id: set
     - name: Using output substitution
       run: |
