--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,7 +7,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: generate artifacts
       run: |
-        $rmm="test_value"
+        rmm="test_value"
         echo "VAR=${rmm}" >> "${GITHUB_OUTPUT}"
         echo "REPO is ${{ github.repository }}"
       id: set
