--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,6 +16,7 @@ jobs:
         echo "TEST=${{ steps.set.outputs.VAR }}_lib"
     - name: Downloading artifact from a different repo
       run: |
+          printenv GH_TOKEN
           mkdir temp
           gh run download 13291957457 --repo rapidsai/rmm --name rmm_conda_cpp_cuda11_aarch64 --dir temp
           ls temp
