--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,7 +21,7 @@ jobs:
           gh run download 13291957457 --repo rapidsai/rmm --name rmm_conda_cpp_cuda11_aarch64 --dir temp
           ls temp
       env:
-        GH_TOKEN: ${{ secrets.PRIVATE_GH_TOKEN || secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.PRIVATE_GH_TOKEN != '' && secrets.PRIVATE_GH_TOKEN || secrets.GITHUB_TOKEN }}
     # - name: upload artifact compression 3
     #   uses: actions/upload-artifact@v4
     #   with:
