--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,7 +1,12 @@
 name: compression-test
-on: [push]
+on: 
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+  workflow_call:
 jobs:
-  build:
+  secondary-build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
